--- a/ENGR114-Labs/Lab04-Plotting_Tide_Data/ENGR114-Lab04-Plotting_Weather_Data.tex
+++ b/ENGR114-Labs/Lab04-Plotting_Tide_Data/ENGR114-Lab04-Plotting_Weather_Data.tex
@@ -91,7 +91,7 @@
     
     %% lab_title.tplx %% 
  
-\newcommand{\labtitle}{Lab02 Sifting Weather Data} 
+\newcommand{\labtitle}{Lab04 Plotting Weather Data} 
     %% header_and_footer.tplx %%
 
 % Header and Footer
@@ -343,221 +343,180 @@
     
 
     
-    \hypertarget{lab-02---sifting-weather-data}{%
-\section{Lab 02 - Sifting Weather
-Data}\label{lab-02---sifting-weather-data}}
+    \hypertarget{lab-06---plotting-weather-data}{%
+\section{Lab 06 - Plotting Weather
+Data}\label{lab-06---plotting-weather-data}}
 
     \hypertarget{prelab}{%
 \subsection{Prelab}\label{prelab}}
 
-Complete Example 3.3 (p.~89) from the textbook. Coding this example will
-help you with the lab assignment. You can find the relevant .xlsx-file
-posted along with these lab instructions on D2L. After completing
-Example 3.3, save your script in a Jupyter notebook. Your work
-completing Example 3.3 does not need to be submitted for credit.
+Before starting your Jupyter notebook, read through this entire
+document, then create a pseudocode outline of what your program will do.
+Use separate the markdown sections that describe what each of sections
+of code will do. Describe what the plots will look like in the markdown
+blocks.
 
     \hypertarget{lab}{%
 \subsection{Lab}\label{lab}}
 
-Import the weather data from the from the
-\texttt{weather\textbackslash{}\_data.xls} file into a Panda's dataframe
-called \texttt{wdf}. This time, the dataframe will contain a couple
-values equal to \texttt{-99999}. Transpose the data (as done in Example
-3.3) so the data for each month is in columns. Save the transposed
-dataframe to the varaiable \texttt{df}. Complete these steps using the
-follwoing commands.
+Download the Excel data file titled
+\protect\hyperlink{}{govt\_camp\_2013\_01\_to\_2016\_03.xlsx} and save
+it to your preferred working directory this needs to be the same
+directory you build the Jupyter notebook in. The excel file contains
+daily weather data points gathered from the USGS weather station in
+Government Camp, OR from Jan 1, 2009 to Mar 31, 2016. The measurements
+and their units are given in the column headers (first row) of the
+spreadsheet. Use Pandas \texttt{pd.read\_csv()} function to read the
+data into a Pandas \emph{dataframe} called \texttt{df}.
 
-\begin{Shaded}
+    \begin{Verbatim}[commandchars=\\\{\}]
+{\color{incolor}In [{\color{incolor}73}]:} \PY{k+kn}{import} \PY{n+nn}{pandas} \PY{k}{as} \PY{n+nn}{pd}
+         \PY{n}{df} \PY{o}{=} \PY{n}{pd}\PY{o}{.}\PY{n}{read\PYZus{}excel}\PY{p}{(}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{govt\PYZus{}camp\PYZus{}2013\PYZus{}01\PYZus{}to\PYZus{}2016\PYZus{}03.xlsx}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}
+         \PY{n}{df}\PY{o}{.}\PY{n}{head}\PY{p}{(}\PY{p}{)}
+\end{Verbatim}
+
+
+\begin{Verbatim}[commandchars=\\\{\}]
+{\color{outcolor}Out[{\color{outcolor}73}]:}              STATION           STATION\_NAME      DATE  \textbackslash{}
+         0  GHCND:USC00353402  GOVERNMENT CAMP OR US  20130101   
+         1  GHCND:USC00353402  GOVERNMENT CAMP OR US  20130102   
+         2  GHCND:USC00353402  GOVERNMENT CAMP OR US  20130103   
+         3  GHCND:USC00353402  GOVERNMENT CAMP OR US  20130104   
+         4  GHCND:USC00353402  GOVERNMENT CAMP OR US  20130105   
+         
+            Precipitation\textbackslash{}n(inches)  Snow Depth\textbackslash{}n(inches)  Snowfall\textbackslash{}n(inches)  \textbackslash{}
+         0                     0.00                    44                 0.0   
+         1                     0.01                    42                 0.0   
+         2                     0.00                    42                 0.0   
+         3                     0.16                    41                 0.0   
+         4                     0.00                    41                 0.0   
+         
+            Max Temp (°F)  Min Temp (°F)  
+         0             29             12  
+         1             27             11  
+         2             20             12  
+         3             31             14  
+         4             37             28  
+\end{Verbatim}
+            
+    The third column of the Pandas dataframe represents the date on which
+the observations in that row were taken. For example, in the first row
+of data contains a value of \texttt{20120101}. That value in the
+\texttt{DATE} column means Jaunuary 01, 2013.
+
+Remove the first two columns of the dataframe so that the first column
+in the dataframe is the \texttt{DATE} column.
+
+    \begin{Shaded}
 \begin{Highlighting}[]
-\ImportTok{import}\NormalTok{ numpy }\ImportTok{as}\NormalTok{ np}
-\ImportTok{import}\NormalTok{ pandas }\ImportTok{as}\NormalTok{ pd}
-\NormalTok{wdf }\OperatorTok{=}\NormalTok{ pd.read_excel(}\StringTok{'weather_data.xlsx'}\NormalTok{, header}\OperatorTok{=}\VariableTok{None}\NormalTok{)}
-\NormalTok{df }\OperatorTok{=}\NormalTok{ wdf.transpose()}
+\NormalTok{df.drop([}\StringTok{'STATION'}\NormalTok{, }\StringTok{'STATION_NAME'}\NormalTok{], axis}\OperatorTok{=}\DecValTok{1}\NormalTok{, inplace}\OperatorTok{=}\VariableTok{True}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
-    Search the Pandas pacakge documentation help section to see how to use
-the \texttt{pd.read\_excel()} function words and why we need the keyword
-argument \texttt{header=None} in this example.
-
-Note: the .xlsx-file must be in your current file path, and quotes need
-to surround the file name.
-
-    \begin{Verbatim}[commandchars=\\\{\}]
-{\color{incolor}In [{\color{incolor}1}]:} \PY{k+kn}{import} \PY{n+nn}{numpy} \PY{k}{as} \PY{n+nn}{np}
-        \PY{k+kn}{import} \PY{n+nn}{pandas} \PY{k}{as} \PY{n+nn}{pd}
-        \PY{n}{wdf} \PY{o}{=} \PY{n}{pd}\PY{o}{.}\PY{n}{read\PYZus{}excel}\PY{p}{(}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{weather\PYZus{}data.xlsx}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{header}\PY{o}{=}\PY{k+kc}{None}\PY{p}{)}
-        \PY{n}{df} \PY{o}{=} \PY{n}{wdf}\PY{o}{.}\PY{n}{transpose}\PY{p}{(}\PY{p}{)}
-\end{Verbatim}
-
-
-    Afterwards, running \texttt{print(df.shape)} will indicate the dataframe
-\texttt{df} has dimensions of 31 rows x 12 columns. Also check the value
-in row 0, column 3 in the dataframe is \texttt{260} by running the
-\texttt{df.head()} method.
-
-    \begin{Verbatim}[commandchars=\\\{\}]
-{\color{incolor}In [{\color{incolor}2}]:} \PY{n+nb}{print}\PY{p}{(}\PY{n}{df}\PY{o}{.}\PY{n}{shape}\PY{p}{)}
-        \PY{n}{df}\PY{o}{.}\PY{n}{head}\PY{p}{(}\PY{p}{)}
-\end{Verbatim}
-
-
-    \begin{Verbatim}[commandchars=\\\{\}]
-(31, 12)
-
-    \end{Verbatim}
-
-\begin{Verbatim}[commandchars=\\\{\}]
-{\color{outcolor}Out[{\color{outcolor}2}]:}     0    1   2    3   4   5   6   7   8    9    10  11
-        0    0   61   2  260  47   0   0   0   0    0    1   0
-        1    0  103   0    1   0   0   0  45   0    0  163   0
-        2  272    0  17    0   0  30   0   0   0    0    5   0
-        3    0    2  27    0   0  42   0   0   0   14    0   0
-        4    0    0   0    0   5   0   0   0   0  156    0   0
-\end{Verbatim}
-            
-    Use the following line to change all of the values in the ndataframe
-\texttt{wd} which are equal to \texttt{-99999} and set them to
-\texttt{NaN} (not a number).
+    The first column of the dataframe represents the date on which the
+observations in that row were measured. For example, row 48 of the
+dataframe contains a value of \texttt{20130219}. This means February 19,
+2013. Replace column 1 of dataframe with 3 columns containing the year
+in the first column, the month in the second column, and the day of the
+month in the third column. When you are finished, your dataframe should
+be 1186x6 and its last row should have the following values:
 
 \begin{verbatim}
-df[df==-99999]=np.nan
+2016    3     31    0    18      0 
 \end{verbatim}
 
-Use the \texttt{df.tail()} method to view the last few rows in the
-dataframe. We see row 30, column 5 has the value `\texttt{NaN} (not a
-number).
+Now you will be able to use indexing options to filter out data from
+certain years and months
 
-    \begin{Verbatim}[commandchars=\\\{\}]
-{\color{incolor}In [{\color{incolor}13}]:} \PY{n}{df}\PY{p}{[}\PY{n}{df}\PY{o}{==}\PY{o}{\PYZhy{}}\PY{l+m+mi}{99999}\PY{p}{]}\PY{o}{=}\PY{n}{np}\PY{o}{.}\PY{n}{nan}
-         \PY{n}{df}\PY{o}{.}\PY{n}{tail}\PY{p}{(}\PY{p}{)}
-\end{Verbatim}
+    \hypertarget{subplots}{%
+\subsubsection{4 subplots}\label{subplots}}
 
+You will create a Matplotlib Figure 1 that will end up looking like the
+Figure 1 in this document below:
 
-\begin{Verbatim}[commandchars=\\\{\}]
-{\color{outcolor}Out[{\color{outcolor}13}]:}     0     1   2     3   4     5   6   7      8   9    10  11
-         26   0   0.0  78  35.0   2  35.0   0   0    6.0   0  2.0   0
-         27   0  62.0   0  13.0   0  14.0   5   0  138.0   0  0.0   0
-         28   0   NaN   5  86.0   0  14.0   0   0   58.0   0  0.0   0
-         29  33   NaN   8   0.0   0   8.0   0   0   10.0   0  0.0   0
-         30  33   NaN   0   NaN   0   NaN   0   0    NaN   1  NaN   0
-\end{Verbatim}
-            
-    By completing Example 3.3, you know the data in the excel file
-represents rainfall in \emph{hundredths of an inch}, but for brevity's
-sake, this lab will treat the data as if it were rainfall in
-\emph{inches}. There is no need to change or scale the data before
-further processing.
+\begin{figure}
+\centering
+\includegraphics{images/fig1.png}
+\caption{Figure\_1}
+\end{figure}
 
-Define a variable called \texttt{month} and set it equal to \texttt{1}
-for now. This will represent the month for which we will compute
-statistics. Later, you will change \texttt{month} to other values.
-\texttt{0} means January, \texttt{1} means February, and so on.
+    Use the \texttt{pd.find()} function to save the precipitation data
+(number of inches only) exclusively for days in the year 2013 to a
+vector NumPy array called \texttt{precip\_2013}. Use the plt.subplots()
+method to plot the data in the first slot in Figure 1. Label its title,
+and its y-axis as you see pictured in this document's Figure 1. Include
+the grid lines as well. Allow Matlab to decide where your grid lines and
+axis tick marks should be.\textbackslash{}
 
-Use the value in \texttt{month} to extract that month's data from your
-\texttt{wd} dataframe. Store these values in a new list called
-\texttt{m}. Because January has 31 days, you only see values in
-\textbf{m} that are positive or zero (no values of -99999 ). Since
-February has 28 days, you will see positive numbers, zeros and
-\texttt{NaN} present in the list.
+Do the same for the precipitation data for 2014, then 2015, then 2016.
+The plot for 2016 should include the x-axis label and have the same axis
+limits as the one in this document's Figure 1.
 
-For example, according to our data, the rainfall for the first 3 days in
-January are 0 inches, 0 inches, and 272 inches. The average rain fall
-per day in the first 3 days of January is 90.667. The average rain fall
-for the days of January 2nd and 3rd is 136.
+    \hypertarget{y-y-plot}{%
+\subsubsection{y-y plot}\label{y-y-plot}}
 
-    Compute and store the following statistics/properties of the data in the
-dataframe \texttt{df1} in variables named as follows:
+Use the \texttt{pd.find()} command to save some of the snow depth data
+into a NumPy array called \texttt{winter13\_14\_sd}. Remember that the
+column headers were in the Excel file. Refer to that file, if need be,
+to see which column was for snow depth. Remember that we deleted the
+date column and added 3 date columns in its place. Your data set should
+only include the data from the first day of November 2013 to the last
+day of February 2014. This will probably be the most difficult part of
+this assignment.
+
+Do the same to select the same days' snow fallen data and save it into a
+NumPy array called \texttt{winter13\_14\_sf}. Use the
+\texttt{ptl.plotyy()} command to plot both sets of data on the same
+graph, but with different y-axes.
+
+Notice the figure has a different vertical axis on the left from that on
+its right. Let Matplotlib choose your axis limits and line colors. Be
+sure to include the grid lines, x-axis label, y-axis label, title, and
+legend you see pictured below.
+
+\begin{figure}
+\centering
+\includegraphics{images/fig2.png}
+\caption{y-y plot}
+\end{figure}
+
+    \hypertarget{histogram}{%
+\subsubsection{Histogram}\label{histogram}}
+
+Create a Matplotlib Figure 3 that looks like this document's Figure 3.
+
+Create a plot just like it from your \texttt{winter13\_14\_sf} NumPy
+array. Match all of its labels etc. 20 bins were used to create this
+histogram.
+
+\begin{figure}
+\centering
+\includegraphics{images/fig3.png}
+\caption{Histogram}
+\end{figure}
+
+    \hypertarget{deliverables}{%
+\subsection{Deliverables}\label{deliverables}}
+
+Each student's submission for the lab must be a single Jupyter Notebook.
+The Jupyter Notebook must contain markdown cells that explain the code,
+code cells that contain the code, and output cells that contain a total
+of 3 plots. The three plots produced by the code cells in the notebook
+should be:
 
 \begin{itemize}
-\tightlist
 \item
-  \texttt{m\_avg}: average inches fallen in month \texttt{m}
+  A plot that contains four sub-plots that shows level verses time
 \item
-  \texttt{m\_max}: maximum inches fallen in month \texttt{m}
+  A y-y plot that shows snow level on one axis and rainfall on another
+  axis
 \item
-  \texttt{d\_max}: day(s) of month \texttt{m} in which \texttt{m\_max}
-  inches fell
-\item
-  \texttt{nd\_zero}: number of day(s) of month \texttt{m} in which zero
-  inches fell
-\item
-  \texttt{d\_zero}: day(s) of month \texttt{m} in which zero inches fell
-\item
-  \texttt{d\_nonzero}: day(s) of month \texttt{m} in which at least some
-  rain fell
-\item
-  \texttt{nd\_nonzero}: number of day(s) in month \texttt{m} in which at
-  least some rain fell\\
-\item
-  \texttt{m\_avg\_nonzero}: average inches of only day(s) in which some
-  rain fell
+  A histogram
 \end{itemize}
 
-    \begin{Verbatim}[commandchars=\\\{\}]
-{\color{incolor}In [{\color{incolor}49}]:} \PY{n}{m} \PY{o}{=} \PY{l+m+mi}{1}
-         
-         \PY{n}{m\PYZus{}avg} \PY{o}{=} \PY{n}{np}\PY{o}{.}\PY{n}{mean}\PY{p}{(}\PY{n}{df}\PY{p}{[}\PY{n}{m}\PY{p}{]}\PY{p}{)}
-         \PY{n+nb}{print}\PY{p}{(}\PY{n}{m\PYZus{}avg}\PY{p}{)}
-         
-         \PY{n}{m\PYZus{}max} \PY{o}{=} \PY{n}{np}\PY{o}{.}\PY{n}{max}\PY{p}{(}\PY{n}{df}\PY{p}{[}\PY{n}{m}\PY{p}{]}\PY{p}{)}
-         \PY{n+nb}{print}\PY{p}{(}\PY{n}{m\PYZus{}max}\PY{p}{)}
-         
-         \PY{n}{d\PYZus{}max} \PY{o}{=} \PY{n}{df}\PY{o}{.}\PY{n}{index}\PY{p}{[}\PY{n}{df}\PY{p}{[}\PY{n}{m}\PY{p}{]} \PY{o}{==} \PY{n}{m\PYZus{}max}\PY{p}{]}
-         \PY{n+nb}{print}\PY{p}{(}\PY{n}{d\PYZus{}max}\PY{p}{[}\PY{l+m+mi}{0}\PY{p}{]}\PY{p}{)}
-         
-         \PY{n}{nd\PYZus{}zero} \PY{o}{=} \PY{n+nb}{sum}\PY{p}{(}\PY{n}{df}\PY{p}{[}\PY{n}{m}\PY{p}{]}\PY{o}{==}\PY{n}{m\PYZus{}max}\PY{p}{)}
-         \PY{n+nb}{print}\PY{p}{(}\PY{n}{nd\PYZus{}zero}\PY{p}{)}
-         
-         \PY{n}{nd\PYZus{}nonzero} \PY{o}{=} \PY{n+nb}{sum}\PY{p}{(}\PY{n}{df}\PY{p}{[}\PY{n}{m}\PY{p}{]}\PY{o}{\PYZgt{}}\PY{l+m+mi}{0}\PY{p}{)}
-         \PY{n+nb}{print}\PY{p}{(}\PY{n}{d\PYZus{}nonzero}\PY{p}{)}
-         
-         \PY{n}{df\PYZus{}list} \PY{o}{=} \PY{n+nb}{list}\PY{p}{(}\PY{n}{df}\PY{p}{[}\PY{n}{m}\PY{p}{]}\PY{o}{.}\PY{n}{values}\PY{p}{)}
-         \PY{n}{pos\PYZus{}rain\PYZus{}lst} \PY{o}{=} \PY{p}{[}\PY{n}{x} \PY{k}{for} \PY{n}{x} \PY{o+ow}{in} \PY{n}{df\PYZus{}list} \PY{k}{if} \PY{n}{x}\PY{o}{\PYZgt{}}\PY{l+m+mi}{0} \PY{p}{]}
-         \PY{n}{np}\PY{o}{.}\PY{n}{mean}\PY{p}{(}\PY{n}{pos\PYZus{}rain\PYZus{}lst}\PY{p}{)}
-\end{Verbatim}
-
-
-    \begin{Verbatim}[commandchars=\\\{\}]
-18.392857142857142
-135.0
-17
-1
-14
-
-    \end{Verbatim}
-
-\begin{Verbatim}[commandchars=\\\{\}]
-{\color{outcolor}Out[{\color{outcolor}49}]:} 36.785714285714285
-\end{Verbatim}
-            
-    Test all of your values for the month of January manually to make sure
-they are correct.
-
-Run your script for the February data (\texttt{m=1}) and check the
-results against manual calculations for that month.
-
-You may wish to test your script against other month's data. When you
-are convinced your results and variable names are correct, Restart the
-notebook Kernal and clear all output. Run each cell one last time and
-ensure the script is error free.
-
-For your own records, save your lab2.ipnb file and your
-\texttt{weather\_data.xlsx} file to the same directory. You do not need
-to submit your \texttt{weather\textbackslash{}\_data.xlsx} file because
-your instructor will have their own copy to test your script.
-
-    \hypertarget{deliverable}{%
-\subsection{Deliverable}\label{deliverable}}
-
-One .ipynb-file with output all cells run. The .ipynb-file should run
-without errors. Uploaded the .ipynb file to D2L by the end of the lab
-period.
-
-    \hypertarget{by-d.-kruger-adapted-by-p.-kazarinoff-portland-community-college-2018}{%
-\paragraph{\texorpdfstring{\emph{By D. Kruger, adapted by P. Kazarinoff,
-Portland Community College,
-2018}}{By D. Kruger, adapted by P. Kazarinoff, Portland Community College, 2018}}\label{by-d.-kruger-adapted-by-p.-kazarinoff-portland-community-college-2018}}
+Make sure to run all the cells in the Jupyter notebook before submitting
+the file. Upload your \textbf{\emph{lab4.ipynb}} file to the Lab 4 drop
+box in D2L.
 
 
     % Add a bibliography block to the postdoc
