--- a/ENGR114-Labs/Lab08-MicroPython/ENGR114-Lab08-MicroPython.tex
+++ b/ENGR114-Labs/Lab08-MicroPython/ENGR114-Lab08-MicroPython.tex
@@ -91,7 +91,7 @@
     
     %% lab_title.tplx %% 
  
-\newcommand{\labtitle}{Lab02 Sifting Weather Data} 
+\newcommand{\labtitle}{Lab08 MicroPython} 
     %% header_and_footer.tplx %%
 
 % Header and Footer
@@ -343,221 +343,332 @@
     
 
     
-    \hypertarget{lab-02---sifting-weather-data}{%
-\section{Lab 02 - Sifting Weather
-Data}\label{lab-02---sifting-weather-data}}
+    \hypertarget{lab-08---micropython}{%
+\section{Lab 08 - MicroPython}\label{lab-08---micropython}}
+
+    \href{http://micropython.org/}{MicroPython} is a port, or version of
+Python designed to run on small, inexpensive, low-power
+microcontrollers. Traditionally, Python is run on a desktop or laptop
+computer (also on cloud servers). Compared to a desktop or laptop,
+microcontrollers are much smaller, cheaper and less powerful. A
+``regular'' version of Python can't run on small, cheap microcontrollers
+because Python is too resource intensive. Regular Python takes up too
+much hard disk space, runs on too much RAM and requires a more powerful
+processor than microcontrollers have.
+
+To get MicroPython to run at all on these small microcontroller boards,
+MicroPython only contains a subset of all the standard library modules
+included with ``regular'' Python. Some of the libraries that are
+included with MicroPython don't have the full set of functions and
+classes that come with the full version of Python. This limited
+functionality allows MicroPython to be compact (around 600 kB for the
+ESP8266 port) and only use a small amount of RAM (down to 16k according
+to the \href{https://micropython.org/}{Micropython main page}.)
 
     \hypertarget{prelab}{%
 \subsection{Prelab}\label{prelab}}
 
-Complete Example 3.3 (p.~89) from the textbook. Coding this example will
-help you with the lab assignment. You can find the relevant .xlsx-file
-posted along with these lab instructions on D2L. After completing
-Example 3.3, save your script in a Jupyter notebook. Your work
-completing Example 3.3 does not need to be submitted for credit.
+Before you start the lab, try using the MicroPython online with a
+broswer-based \href{https://micropython.org/unicorn/}{MicroPython online
+emulator}. The emulator allows you to run commands at a MicroPython
+Prompt and see the result on a virtual pyboard.
+
+Also browse through the
+\href{https://docs.micropython.org/en/latest/}{MicroPython Docs} and in
+particular the
+\href{https://docs.micropython.org/en/latest/esp8266/quickref.html}{ESP8266}
+section. You will use an ESP8266-based microcontroller in this lab.
 
     \hypertarget{lab}{%
 \subsection{Lab}\label{lab}}
 
-Import the weather data from the from the
-\texttt{weather\textbackslash{}\_data.xls} file into a Panda's dataframe
-called \texttt{wdf}. This time, the dataframe will contain a couple
-values equal to \texttt{-99999}. Transpose the data (as done in Example
-3.3) so the data for each month is in columns. Save the transposed
-dataframe to the varaiable \texttt{df}. Complete these steps using the
-follwoing commands.
+    \hypertarget{installation}{%
+\subsubsection{Installation}\label{installation}}
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\ImportTok{import}\NormalTok{ numpy }\ImportTok{as}\NormalTok{ np}
-\ImportTok{import}\NormalTok{ pandas }\ImportTok{as}\NormalTok{ pd}
-\NormalTok{wdf }\OperatorTok{=}\NormalTok{ pd.read_excel(}\StringTok{'weather_data.xlsx'}\NormalTok{, header}\OperatorTok{=}\VariableTok{None}\NormalTok{)}
-\NormalTok{df }\OperatorTok{=}\NormalTok{ wdf.transpose()}
-\end{Highlighting}
-\end{Shaded}
+MicroPython should already be installed on your ESP8266 Microcontroller
+when you start the lab. If you are unable to run any commands at the
+MicroPython REPL, this might mean that MicroPython has not been
+pre-installed. Check with your instructor to determine if MicorPython
+installation is the issue. If you do need to install MicroPython on your
+ESP8266, refer to this resource:
+\href{https://pythonforundergradengineers.com/micropython-install.html}{Installing
+Micropython on an Adafruit Feather Huzzah ESP8266}
 
-    Search the Pandas pacakge documentation help section to see how to use
-the \texttt{pd.read\_excel()} function words and why we need the keyword
-argument \texttt{header=None} in this example.
+    \hypertarget{connect-the-esp8266-microcontroller-to-your-computer}{%
+\subsubsection{Connect the ESP8266 microcontroller to your
+computer}\label{connect-the-esp8266-microcontroller-to-your-computer}}
 
-Note: the .xlsx-file must be in your current file path, and quotes need
-to surround the file name.
+    Use a microUSB cable to connect the microcontroller to the computer.
+Make sure that the microUSB cable is a full USB data cable and not just
+a simple power cable. Cables that are just used to charge phones may
+only be power cables and may not be capable of transmitting data. The
+cable you are provided with in lab is a microUSB data cable and should
+work.
 
-    \begin{Verbatim}[commandchars=\\\{\}]
-{\color{incolor}In [{\color{incolor}1}]:} \PY{k+kn}{import} \PY{n+nn}{numpy} \PY{k}{as} \PY{n+nn}{np}
-        \PY{k+kn}{import} \PY{n+nn}{pandas} \PY{k}{as} \PY{n+nn}{pd}
-        \PY{n}{wdf} \PY{o}{=} \PY{n}{pd}\PY{o}{.}\PY{n}{read\PYZus{}excel}\PY{p}{(}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{weather\PYZus{}data.xlsx}\PY{l+s+s1}{\PYZsq{}}\PY{p}{,} \PY{n}{header}\PY{o}{=}\PY{k+kc}{None}\PY{p}{)}
-        \PY{n}{df} \PY{o}{=} \PY{n}{wdf}\PY{o}{.}\PY{n}{transpose}\PY{p}{(}\PY{p}{)}
-\end{Verbatim}
+    \hypertarget{determine-which-serial-port-the-esp8266-microcontroller-is-connected-to}{%
+\subsubsection{Determine which serial port the ESP8266 microcontroller
+is connected
+to}\label{determine-which-serial-port-the-esp8266-microcontroller-is-connected-to}}
 
+    Use Windows Device Manager to determine which serial port the Feather
+Huzzah is connected to. O Windows 10, the microcontroller usually comes
+up as \texttt{COM4}. You can find the serial port by looking in the
+Ports (COM \& LPT) category of the Windows Device Manager. Look for
+something like \textbf{Silicon Labs CP210x USB to UART Bridge (COM4)} in
+the \textbf{Ports (COM \& LPT)} menu. It is the \textbf{COM\#} that you
+are looking for.
 
-    Afterwards, running \texttt{print(df.shape)} will indicate the dataframe
-\texttt{df} has dimensions of 31 rows x 12 columns. Also check the value
-in row 0, column 3 in the dataframe is \texttt{260} by running the
-\texttt{df.head()} method.
+\begin{figure}
+\centering
+\includegraphics{images/find_device_manager.png}
+\caption{Find the Windows 10 Device Manager}
+\end{figure}
 
-    \begin{Verbatim}[commandchars=\\\{\}]
-{\color{incolor}In [{\color{incolor}2}]:} \PY{n+nb}{print}\PY{p}{(}\PY{n}{df}\PY{o}{.}\PY{n}{shape}\PY{p}{)}
-        \PY{n}{df}\PY{o}{.}\PY{n}{head}\PY{p}{(}\PY{p}{)}
-\end{Verbatim}
+\begin{figure}
+\centering
+\includegraphics{images/device_manager_menu.png}
+\caption{Device Manager Menu on Windows 10}
+\end{figure}
 
+    \hypertarget{use-putty-to-connect-to-the-esp8266-microcontroller}{%
+\subsubsection{Use PuTTY to connect to the ESP8266
+microcontroller}\label{use-putty-to-connect-to-the-esp8266-microcontroller}}
 
-    \begin{Verbatim}[commandchars=\\\{\}]
-(31, 12)
+    Ensure the ESP8266 board is connected with a USB cable, then connect to
+it with a program called PuTTY. Set the proper serial port (COM\#) and
+and specify 115200 baud. Remember to use the \textbf{Serial} radio
+button under \textbf{Connection Type:} to select serial communication or
+you will be trying to communicate with the ESP8266 Microcontroller over
+SSH which won't work.
 
-    \end{Verbatim}
+\begin{figure}
+\centering
+\includegraphics{images/putty_in_start_menu.png}
+\caption{PuTTY in Windows 10 start menu}
+\end{figure}
 
-\begin{Verbatim}[commandchars=\\\{\}]
-{\color{outcolor}Out[{\color{outcolor}2}]:}     0    1   2    3   4   5   6   7   8    9    10  11
-        0    0   61   2  260  47   0   0   0   0    0    1   0
-        1    0  103   0    1   0   0   0  45   0    0  163   0
-        2  272    0  17    0   0  30   0   0   0    0    5   0
-        3    0    2  27    0   0  42   0   0   0   14    0   0
-        4    0    0   0    0   5   0   0   0   0  156    0   0
-\end{Verbatim}
-            
-    Use the following line to change all of the values in the ndataframe
-\texttt{wd} which are equal to \texttt{-99999} and set them to
-\texttt{NaN} (not a number).
+\begin{figure}
+\centering
+\includegraphics{images/putty_config.PNG}
+\caption{PuTTY configuration}
+\end{figure}
+
+This should bring up the MicroPython REPL prompt
+\texttt{\textgreater{}\textgreater{}\textgreater{}}. If you can't see
+the \texttt{\textgreater{}\textgreater{}\textgreater{}} prompt, try
+typing {[}Enter{]}, Ctrl-D, pushing the RESET button on the ESP8266
+microcontroller or unplugging then replugging the USB cable.
+
+\begin{figure}
+\centering
+\includegraphics{images/REPL_prompt.PNG}
+\caption{MicroPython REPL prompt}
+\end{figure}
+
+    \hypertarget{run-commands-at-the-prompt-to-turn-the-built-in-led-on-the-adafruit-feather-huzzah-esp8266-on-and-off}{%
+\subsubsection{Run commands at the prompt to turn the built-in LED on
+the Adafruit Feather Huzzah ESP8266 on and
+off}\label{run-commands-at-the-prompt-to-turn-the-built-in-led-on-the-adafruit-feather-huzzah-esp8266-on-and-off}}
+
+    At the MicroPython REPL (the MicroPython command prompt
+\texttt{\textgreater{}\textgreater{}\textgreater{}}) try the following
+commands:
 
 \begin{verbatim}
-df[df==-99999]=np.nan
+>>> print('MicroPython for Engineers!')
+MicroPython for Engineers
 \end{verbatim}
 
-Use the \texttt{df.tail()} method to view the last few rows in the
-dataframe. We see row 30, column 5 has the value `\texttt{NaN} (not a
-number).
+If we import the \texttt{sys} module, we can see the MicroPython
+implementation and platform.
 
-    \begin{Verbatim}[commandchars=\\\{\}]
-{\color{incolor}In [{\color{incolor}13}]:} \PY{n}{df}\PY{p}{[}\PY{n}{df}\PY{o}{==}\PY{o}{\PYZhy{}}\PY{l+m+mi}{99999}\PY{p}{]}\PY{o}{=}\PY{n}{np}\PY{o}{.}\PY{n}{nan}
-         \PY{n}{df}\PY{o}{.}\PY{n}{tail}\PY{p}{(}\PY{p}{)}
-\end{Verbatim}
+\begin{verbatim}
+>>> import sys
+>>> sys.implementation
+(name='micropython', version=(1, 9, 3))
+>>> sys.platform
+'esp8266'
+\end{verbatim}
 
+\begin{figure}
+\centering
+\includegraphics{images/sys_dot_implementation_and_platform.PNG}
+\caption{Results of running sys commands at the MicroPython REPL prompt}
+\end{figure}
 
-\begin{Verbatim}[commandchars=\\\{\}]
-{\color{outcolor}Out[{\color{outcolor}13}]:}     0     1   2     3   4     5   6   7      8   9    10  11
-         26   0   0.0  78  35.0   2  35.0   0   0    6.0   0  2.0   0
-         27   0  62.0   0  13.0   0  14.0   5   0  138.0   0  0.0   0
-         28   0   NaN   5  86.0   0  14.0   0   0   58.0   0  0.0   0
-         29  33   NaN   8   0.0   0   8.0   0   0   10.0   0  0.0   0
-         30  33   NaN   0   NaN   0   NaN   0   0    NaN   1  NaN   0
-\end{Verbatim}
-            
-    By completing Example 3.3, you know the data in the excel file
-represents rainfall in \emph{hundredths of an inch}, but for brevity's
-sake, this lab will treat the data as if it were rainfall in
-\emph{inches}. There is no need to change or scale the data before
-further processing.
+If you see similar output, that means MicroPython is working on the
+ESP8266 Microcontroller. We can also view the flash memory size of our
+microcontroller and the size of the MicroPython firmware we installed.
+Try this at the MicroPython prompt:
 
-Define a variable called \texttt{month} and set it equal to \texttt{1}
-for now. This will represent the month for which we will compute
-statistics. Later, you will change \texttt{month} to other values.
-\texttt{0} means January, \texttt{1} means February, and so on.
+\begin{verbatim}
+>>> import port_diag
+\end{verbatim}
 
-Use the value in \texttt{month} to extract that month's data from your
-\texttt{wd} dataframe. Store these values in a new list called
-\texttt{m}. Because January has 31 days, you only see values in
-\textbf{m} that are positive or zero (no values of -99999 ). Since
-February has 28 days, you will see positive numbers, zeros and
-\texttt{NaN} present in the list.
+\begin{figure}
+\centering
+\includegraphics{images/import_port_diag.PNG}
+\caption{Results of running import port\_diag at the MicroPython REPL
+prompt}
+\end{figure}
 
-For example, according to our data, the rainfall for the first 3 days in
-January are 0 inches, 0 inches, and 272 inches. The average rain fall
-per day in the first 3 days of January is 90.667. The average rain fall
-for the days of January 2nd and 3rd is 136.
+We can see the flash memory size is 4 MB. Below the label
+\texttt{Firmware\ checksum:} we can see a line for
+\texttt{size:\ 600872}. This means the size of our Micropythpon
+installation is about 600 KB or 0.6 MB. Just over half a megabyte and we
+are running a working version of Python!
 
-    Compute and store the following statistics/properties of the data in the
-dataframe \texttt{df1} in variables named as follows:
+    \hypertarget{blinking-a-led}{%
+\subsection{Blinking a LED}\label{blinking-a-led}}
+
+    The ESP8266 microcontroller as a built-in red LED mounted on the board
+close to the USB cable input. MicroPython can be used to blink this LED
+on and off.
+
+    Connect an LED to the ESP8266 Microcontroller as shown below.
 
 \begin{itemize}
 \tightlist
 \item
-  \texttt{m\_avg}: average inches fallen in month \texttt{m}
+  Connect Pin 13 to the LONG leg of the LED (red wire)
 \item
-  \texttt{m\_max}: maximum inches fallen in month \texttt{m}
-\item
-  \texttt{d\_max}: day(s) of month \texttt{m} in which \texttt{m\_max}
-  inches fell
-\item
-  \texttt{nd\_zero}: number of day(s) of month \texttt{m} in which zero
-  inches fell
-\item
-  \texttt{d\_zero}: day(s) of month \texttt{m} in which zero inches fell
-\item
-  \texttt{d\_nonzero}: day(s) of month \texttt{m} in which at least some
-  rain fell
-\item
-  \texttt{nd\_nonzero}: number of day(s) in month \texttt{m} in which at
-  least some rain fell\\
-\item
-  \texttt{m\_avg\_nonzero}: average inches of only day(s) in which some
-  rain fell
+  Connect GND to the SHORT leg of the LED to through a 330 \(\Omega\)
+  resistor (black wire).
 \end{itemize}
 
-    \begin{Verbatim}[commandchars=\\\{\}]
-{\color{incolor}In [{\color{incolor}49}]:} \PY{n}{m} \PY{o}{=} \PY{l+m+mi}{1}
-         
-         \PY{n}{m\PYZus{}avg} \PY{o}{=} \PY{n}{np}\PY{o}{.}\PY{n}{mean}\PY{p}{(}\PY{n}{df}\PY{p}{[}\PY{n}{m}\PY{p}{]}\PY{p}{)}
-         \PY{n+nb}{print}\PY{p}{(}\PY{n}{m\PYZus{}avg}\PY{p}{)}
-         
-         \PY{n}{m\PYZus{}max} \PY{o}{=} \PY{n}{np}\PY{o}{.}\PY{n}{max}\PY{p}{(}\PY{n}{df}\PY{p}{[}\PY{n}{m}\PY{p}{]}\PY{p}{)}
-         \PY{n+nb}{print}\PY{p}{(}\PY{n}{m\PYZus{}max}\PY{p}{)}
-         
-         \PY{n}{d\PYZus{}max} \PY{o}{=} \PY{n}{df}\PY{o}{.}\PY{n}{index}\PY{p}{[}\PY{n}{df}\PY{p}{[}\PY{n}{m}\PY{p}{]} \PY{o}{==} \PY{n}{m\PYZus{}max}\PY{p}{]}
-         \PY{n+nb}{print}\PY{p}{(}\PY{n}{d\PYZus{}max}\PY{p}{[}\PY{l+m+mi}{0}\PY{p}{]}\PY{p}{)}
-         
-         \PY{n}{nd\PYZus{}zero} \PY{o}{=} \PY{n+nb}{sum}\PY{p}{(}\PY{n}{df}\PY{p}{[}\PY{n}{m}\PY{p}{]}\PY{o}{==}\PY{n}{m\PYZus{}max}\PY{p}{)}
-         \PY{n+nb}{print}\PY{p}{(}\PY{n}{nd\PYZus{}zero}\PY{p}{)}
-         
-         \PY{n}{nd\PYZus{}nonzero} \PY{o}{=} \PY{n+nb}{sum}\PY{p}{(}\PY{n}{df}\PY{p}{[}\PY{n}{m}\PY{p}{]}\PY{o}{\PYZgt{}}\PY{l+m+mi}{0}\PY{p}{)}
-         \PY{n+nb}{print}\PY{p}{(}\PY{n}{d\PYZus{}nonzero}\PY{p}{)}
-         
-         \PY{n}{df\PYZus{}list} \PY{o}{=} \PY{n+nb}{list}\PY{p}{(}\PY{n}{df}\PY{p}{[}\PY{n}{m}\PY{p}{]}\PY{o}{.}\PY{n}{values}\PY{p}{)}
-         \PY{n}{pos\PYZus{}rain\PYZus{}lst} \PY{o}{=} \PY{p}{[}\PY{n}{x} \PY{k}{for} \PY{n}{x} \PY{o+ow}{in} \PY{n}{df\PYZus{}list} \PY{k}{if} \PY{n}{x}\PY{o}{\PYZgt{}}\PY{l+m+mi}{0} \PY{p}{]}
-         \PY{n}{np}\PY{o}{.}\PY{n}{mean}\PY{p}{(}\PY{n}{pos\PYZus{}rain\PYZus{}lst}\PY{p}{)}
-\end{Verbatim}
+\begin{figure}
+\centering
+\includegraphics{images/feather_huzzah_LED_bb.png}
+\caption{fritzing diagram ESP8266 LED}
+\end{figure}
 
+    In the PuTTY serial window, test to see if the MicroPython REPL is still
+functioning with a basic \emph{Hello World} program.
 
-    \begin{Verbatim}[commandchars=\\\{\}]
-18.392857142857142
-135.0
-17
+\begin{verbatim}
+>>> print("Hello World")
+Hello World
+\end{verbatim}
+
+Next, we will blink the ESP8266 micrcontroller's built-in LED. The
+microcontroller has a built-in LED connected to Pin 0. If we control the
+current going to Pin 0, we control the built-in LED. To control a Pin
+using MicroPython, first import the \textbf{machine} module. Next a
+\texttt{Pin} object needs to be created. The integer passed into
+\texttt{machine.Pin()} determines the pin number assigned to the
+\texttt{Pin} object.
+
+\begin{verbatim}
+>>> import machine
+>>> pin = machine.Pin(0)
+\end{verbatim}
+
+The value (on or off) of Pin 0 can be returned using
+
+\begin{verbatim}
+>>> pin.value
 1
-14
+\end{verbatim}
 
-    \end{Verbatim}
+To assign a value to Pin 0, the \texttt{Pin} object must be created as
+an \emph{output} pin. An output pin is a pin where a program or user
+determines the pin output. An input pin is a pin set up to read input,
+like the input from a sensor. In this case we want to assign Pin 0 as an
+output pin.
 
-\begin{Verbatim}[commandchars=\\\{\}]
-{\color{outcolor}Out[{\color{outcolor}49}]:} 36.785714285714285
-\end{Verbatim}
-            
-    Test all of your values for the month of January manually to make sure
-they are correct.
+\begin{verbatim}
+>>> pin = machine.Pin(0, machine.Pin.OUT)
 
-Run your script for the February data (\texttt{m=1}) and check the
-results against manual calculations for that month.
+# turn the LED on
+>>> pin.value(0)
 
-You may wish to test your script against other month's data. When you
-are convinced your results and variable names are correct, Restart the
-notebook Kernal and clear all output. Run each cell one last time and
-ensure the script is error free.
+# turn the LED off
+>>> pin.value(1)
+\end{verbatim}
 
-For your own records, save your lab2.ipnb file and your
-\texttt{weather\_data.xlsx} file to the same directory. You do not need
-to submit your \texttt{weather\textbackslash{}\_data.xlsx} file because
-your instructor will have their own copy to test your script.
+    \hypertarget{run-code-at-the-micropython-repl-to-blink-the-led}{%
+\subsubsection{Run code at the MicroPython REPL to blink the
+LED}\label{run-code-at-the-micropython-repl-to-blink-the-led}}
 
-    \hypertarget{deliverable}{%
-\subsection{Deliverable}\label{deliverable}}
+    Now we can write a for loop at the MicroPython REPL to blink the LED on
+and off. In order to do this, we need to import the \textbf{machine}
+module and the \textbf{time} module.
 
-One .ipynb-file with output all cells run. The .ipynb-file should run
-without errors. Uploaded the .ipynb file to D2L by the end of the lab
-period.
+    \begin{verbatim}
+>>> import machine
+>>> import time
+>>> pin = machine.Pin(0, machine.Pin.OUT)
+>>> for i in range(10):
+...     pin.value(1)
+...     time.sleep(0.5)
+...     pin.value(0)
+...     time.sleep(0.5)
+# backspace to exit loop indent and execute the loop.
+.... 
+\end{verbatim}
 
-    \hypertarget{by-d.-kruger-adapted-by-p.-kazarinoff-portland-community-college-2018}{%
-\paragraph{\texorpdfstring{\emph{By D. Kruger, adapted by P. Kazarinoff,
-Portland Community College,
-2018}}{By D. Kruger, adapted by P. Kazarinoff, Portland Community College, 2018}}\label{by-d.-kruger-adapted-by-p.-kazarinoff-portland-community-college-2018}}
+    \hypertarget{reading-a-potentiometer}{%
+\subsection{Reading a potentiometer}\label{reading-a-potentiometer}}
+
+    In this section, you will learn how to connect a potentiometer sensor to
+the ESP8266 Microcontroller and use the MicroPython REPL to record the
+potentiometer level.
+
+    \hypertarget{connect-the-potentiometer-to-the-esp8266-microcontroller}{%
+\subsubsection{Connect the potentiometer to the ESP8266
+Microcontroller}\label{connect-the-potentiometer-to-the-esp8266-microcontroller}}
+
+Connect the potentiometer to the ESP8266 Microcontroller as shown below.
+Connect Pin 13 to the LONG leg of the LED (red wire) and connect the
+SHORT leg of the LED to ground through a 330 \(\Omega\) resistor (black
+wire).
+
+\begin{figure}
+\centering
+\includegraphics{images/feather_huzzah_potentiometer_bb.png}
+\caption{fritzing diagram ESP8266 LED}
+\end{figure}
+
+    \hypertarget{run-code-at-the-micropython-repl-to-measure-the-light-level}{%
+\subsubsection{Run code at the MicroPython REPL to measure the light
+level}\label{run-code-at-the-micropython-repl-to-measure-the-light-level}}
+
+    In the PuTTY serial window, import the \texttt{machine} module and then
+create an instance of the \texttt{machine.I2C} class with the
+\texttt{scl} and \texttt{sda} parameters set as
+\texttt{scl=machine.Pin(5)} and \texttt{sda=machine.Pin(4)}. Then create
+an empty \texttt{bytearray} which will store the data coming in from the
+MCP9808 temperature sensor. As strings in Micropython are UTF-8 encoded
+by default (like in Python 3), a \emph{bytearray} needs to be used to
+read the raw output from the MCP9808 chip registers. The command
+\texttt{i2c.readfrom\_mem\_into()} method brings in the data from the
+sensor and saves it to the \texttt{byte\_data} variable. The arguments
+inside the \texttt{i2c.readfrom\_mem\_into()} method \texttt{24} and
+\texttt{5} correspond to the I2C memory address and registry address of
+the temperature data stored in the MCP9808 temperature sensor.
+
+\begin{verbatim}
+>>> import machine
+>>> import time
+>>> pin = machine.Pin(0, machine.Pin.IN)
+>>> for i in range(10):
+...     print(pin.value())
+...     time.sleep(0.5)
+# backspace to exit loop indent and execute the loop.
+.... 
+\end{verbatim}
+
+    \hypertarget{deliverables}{%
+\subsection{Deliverables}\label{deliverables}}
+
+Before closing the PuTTY window, run the command \texttt{history}. Copy
+the ouput from the window into a text file. Save the file as
+\texttt{lab8.txt}. Upload the \texttt{lab8.tct} file to D2L.
+
+    \hypertarget{by-p.-kazarinoff-portland-community-college-2018}{%
+\paragraph{\texorpdfstring{\emph{By P. Kazarinoff, Portland Community
+College,
+2018}}{By P. Kazarinoff, Portland Community College, 2018}}\label{by-p.-kazarinoff-portland-community-college-2018}}
 
 
     % Add a bibliography block to the postdoc
